kubernetes/streamlit-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-app
spec:
  selector:
    app: streamlit-app
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  type: LoadBalancer
